[feature]:完善springboot业务系统：1.引入定时任务，定时拉取新闻 2.发送到输入通道

--- a/JuLei/pom.xml
+++ b/JuLei/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>pulsar-functions-api</artifactId>
             <version>4.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -48,6 +53,14 @@
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                 </configuration>
+                <!-- 补充执行绑定 -->
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals><goal>single</goal></goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
