--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -39,6 +39,20 @@
             <artifactId>pulsar-client-admin</artifactId>
             <version>4.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId> <!-- 或使用@Scheduled -->
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -70,7 +84,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
-                    <mainClass>com.ysu.wyh.WyhApplication</mainClass>
+                    <mainClass>Web.WyhApplication</mainClass>
                     <skip>true</skip>
                 </configuration>
                 <executions>
